--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
         </li>
       </ul>
     </nav>
-    <div id="PaoFondo">
+    <div id="nutriaFondo">
       <img src="img\portada.jpg" alt="" />
     </div>
     <!--NAVBAR PC-->
